# LangChain-Learning

./: .gitignore  README.md  main.py  pyproject.toml
.chroma/: chroma.sqlite3
code_intepretter/: main.py
faiss_index_react/: index.faiss  index.pkl
lanchain_serarch_agent/: main.py
langchain_ReAct_Algo/: main.py
langchain_document_assistant_rag/: injestion.py  main.py  uv add langchain-openai langchain-ollama.yaml
langchain_document_assistant_rag/backend/: core.py
langchain_funcation_calling/: function_calling_1.py
langchain_helloworld/: main_ollama.py  main_openai.py
langchain_rag/: injestion.py  main.py  main2.py  medium1.txt
langchain_rag/using_pdf/: main.py
langchain_serarch_agent/: instagram_scrape.py  main_custom_search.py  main_tavily_search_tool.py
langgraph-agent-executor/: main.py  nodes.py  react.py
langgraph-corrective-rag/: injestion.py  main.py
langgraph-corrective-rag/graph/: state.py
langgraph-corrective-rag/graph/chains/: retrieval_grader.py
langgraph-corrective-rag/graph/nodes/: retrieve.py
langgraph-reflction-agents/: chains.py  main.py
langgraph-reflexion-agents/: answer_schema.py  chain.py  main.py  tool_executor.py
langgraph_corrective_rag/: injestion.py  main.py
langgraph_corrective_rag/.chroma/: chroma.sqlite3
langgraph_corrective_rag/graph/: consts.py  graph.py  state.py
langgraph_corrective_rag/graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
langgraph_corrective_rag/graph/chains/tests/: test_chains.py
langgraph_corrective_rag/graph/nodes/: generate.py  grade_documents.py  retrieve.py  web_search.py
legacy_ReAct_agents/: main.py  main_latest.py  output_parsing_main.py  react_agent_main_01.py  runnable_lambda_main.py  schema.py  structured_passing.py
